modify readme and html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网站导航</title>
+    <title>Mysterious Logos</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,11 +31,11 @@
     </style>
 </head>
 <body>
-    <h1>欢迎来到我的网站导航</h1>
-    <p>请选择你要访问的子站点：</p>
+    <h1>This is the navigation page for my sites</h1>
+    <p>Sites are listed below</p>
     <ul class="nav-links">
-        <li><a href="https://sub1.example.com">子站点 1</a></li>
-        <li><a href="https://sub2.example.com">子站点 2</a></li>
+        <li><a href="https://blog.mythlogos.top">Blog: Simple thoughts</a></li>
+        <li><a href="https://note.mythlogos.top">Note: Useful knowledge</a></li>
     </ul>
 </body>
 </html>
